--- a/src/components/ChooseMonth/styles.module.scss
+++ b/src/components/ChooseMonth/styles.module.scss
@@ -12,7 +12,8 @@
       text-transform: capitalize;
       text-align: center;
       min-width: 10rem;
-      font-size: 1.5rem;
+      font-size: 1.8rem;
+      margin: 0;
     }
   }
   &__Changemonth {
