--- a/src/containers/Bills/Bill/styles.module.scss
+++ b/src/containers/Bills/Bill/styles.module.scss
@@ -28,6 +28,30 @@
     flex-direction: column;
     justify-content: flex-start;
   }
+  &__delete {
+    content: "";
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    padding-bottom: 0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    border: 1px solid #293742;
+    background-color: #394b59;
+    color: #dfe1df;
+    &:hover {
+      background-color: #dfe1df;
+      color: #394b59;
+    }
+  }
   &__title {
     font-size: 1.2rem;
     color: #dfe1df;
@@ -72,6 +96,16 @@
   &:hover {
     background-color: darken(#394b59, 2%);
     cursor: pointer;
+  }
+}
+
+.wrapperButton {
+  padding: 0.5rem;
+  &__content {
+    padding: 1rem 1.2rem;
+    button {
+      margin: 0 0.5rem;
+    }
   }
 }
 
